--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.5"
+    "@gorhom/bottom-sheet": "^4.4.3",
+    "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/drawer": "^6.4.4",
+    "@react-navigation/material-bottom-tabs": "^6.2.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.2.3",
+    "axios": "^0.27.2",
+    "expo": "^45.0.0",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.4",
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-logs": "^5.0.1",
+    "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
