--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "expo": "^45.0.0",
     "expo-barcode-scanner": "~11.3.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
     "react": "17.0.2",
