--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gorhom/bottom-sheet": "^4.4.3",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "react-native-picker/picker",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
@@ -26,7 +27,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-logs": "^5.0.1",
-    "react-native-paper": "^4.12.4",
+    "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "^3.17.0",
