--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native": "0.68.2",
     "react-native-logs": "^5.0.1",
     "react-native-paper": "^4.12.5",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
