--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
+    "aws-amplify": "^4.3.41",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
     "expo-barcode-scanner": "~11.3.0",
