--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@gorhom/bottom-sheet": "^4.4.3",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-native-picker/picker": "react-native-picker/picker",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
+    "amazon-cognito-identity-js": "^5.2.12",
     "aws-amplify": "^4.3.41",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
