--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.2.3",
     "amazon-cognito-identity-js": "^5.2.12",
     "aws-amplify": "^4.3.41",
+    "aws-amplify-react-native": "^6.0.5",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
     "expo-barcode-scanner": "~11.3.0",
@@ -28,6 +29,7 @@
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
     "react": "17.0.2",
+    "react-hook-form": "^7.38.0",
     "react-native": "0.68.2",
     "react-native-logs": "^5.0.1",
     "react-native-paper": "^4.12.5",
