--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@gorhom/bottom-sheet": "^4.4.3",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/netinfo": "^9.3.6",
-    "@react-native-picker/picker": "react-native-picker/picker",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
@@ -29,14 +29,16 @@
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
     "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.38.0",
     "react-native": "0.68.2",
     "react-native-logs": "^5.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "^3.17.0",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
     "recoil": "^0.7.5"
   },
   "devDependencies": {
