--- a/package.json
+++ b/package.json
@@ -24,8 +24,16 @@
     "aws-amplify-react-native": "^6.0.5",
     "axios": "^0.27.2",
     "expo": "^45.0.0",
+    "expo-av": "~11.2.3",
     "expo-barcode-scanner": "~11.3.0",
+    "expo-document-picker": "~10.2.1",
+    "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
+    "expo-haptics": "~11.2.0",
+    "expo-image-manipulator": "~10.3.1",
+    "expo-image-picker": "~13.1.1",
+    "expo-media-library": "~14.1.0",
+    "expo-sharing": "~10.2.0",
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
     "react": "17.0.2",
@@ -34,12 +42,15 @@
     "react-native": "0.68.2",
     "react-native-logs": "^5.0.1",
     "react-native-paper": "^4.12.5",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "stream-chat": "^8.1.0",
+    "stream-chat-expo": "^5.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
