--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^2.5.0",
     "@gorhom/bottom-sheet": "^4.4.3",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -40,7 +41,6 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.38.0",
     "react-native": "0.68.2",
-    "react-native-logs": "^5.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.8.0",
     "react-native-responsive-screen": "^1.4.2",
