--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-amplify": "^4.3.41",
     "aws-amplify-react-native": "^6.0.5",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.6",
     "expo": "^45.0.0",
     "expo-av": "~11.2.3",
     "expo-barcode-scanner": "~11.3.0",
