--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.1.6",
     "@expo/ngrok": "^2.5.0",
-    "@gorhom/bottom-sheet": "^4.4.6",
+    "@gorhom/bottom-sheet": "^4.4.3",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "9.3.7",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
@@ -26,43 +25,37 @@
     "aws-amplify-react-native": "^6.0.5",
     "axios": "^0.27.2",
     "dayjs": "^1.11.6",
-    "expo": "^48.0.0",
-    "expo-av": "~13.2.1",
-    "expo-barcode-scanner": "~12.3.2",
-    "expo-clipboard": "^4.1.2",
-    "expo-document-picker": "~11.2.2",
-    "expo-file-system": "~15.2.2",
-    "expo-font": "~11.1.1",
-    "expo-haptics": "~12.2.1",
-    "expo-image-manipulator": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-sharing": "~11.2.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^45.0.0",
+    "expo-av": "~11.2.3",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-document-picker": "~10.2.1",
+    "expo-file-system": "~14.0.0",
+    "expo-font": "~10.1.0",
+    "expo-haptics": "~11.2.0",
+    "expo-image-manipulator": "~10.3.1",
+    "expo-image-picker": "~13.1.1",
+    "expo-media-library": "~14.1.0",
+    "expo-sharing": "~10.2.0",
+    "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.38.0",
-    "react-native": "0.71.7",
+    "react-native": "0.68.2",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.14.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safari-view": "^2.1.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.11",
+    "react-native-web": "0.17.7",
     "recoil": "^0.7.5",
-    "stream-chat": "^8.6.0",
-    "stream-chat-expo": "^5.13.0",
-    "stream-chat-react-native-core": "^5.13.0",
-    "webpack": "^5.0.0"
+    "stream-chat": "^8.1.0",
+    "stream-chat-expo": "^5.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "resolutions": {
-    "react-native-reanimated": "2.14.4"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
